# cdirecomp

./: .gitignore  .gitmodules  BIOS-CLOSEOUT.md  CLAUDE.md  DEBUG.md  ENHANCEMENTS.md  HANDOFF.md  PLAN.md  PRINCIPLES.md  PROVENANCE.md  README.md  RESUME.md  RUNTIME-README.md  TCP.md  THIRD-PARTY-NOTICES.md  TODO.md  player.cfg.example
bios/: README.md  cdrtos_discovered.txt
docs/: ARCHITECTURE.md  COSIM-SPEC.md
hotelmario/: README.md  game.cfg
oracle/: CMakeLists.txt  cdi_oracle.cpp  cosim_state.cpp  cosim_state.hpp
recompiler/: CMakeLists.txt  PROVENANCE.txt
recompiler/src/: annotations.c  annotations.h  code_generator.c  code_generator.h  codegen_diag.c  codegen_diag.h  disc_parser.c  disc_parser.h  function_finder.c  function_finder.h  game_config.c  game_config.h  m68k_decoder.c  m68k_decoder.h  m68k_validator.c  m68k_validator.h  main_cdi.c  main_cdi_bios.c  main_genesis.c
runner/: CMakeLists.txt
runner/include/: cdi_audio.h  cdi_frontend.h  cdi_host_time.h  cdi_media.h  cdi_runtime.h  cosim_state.h  debug_server.h  game_extras.h  m68k_arith.h  m68k_interp.h  mcd212_video.h  player_config.h
runner/src/: cdi_audio.c  cdi_bus.c  cdi_frontend.c  cdi_host_time.c  cdi_input.c  cdi_media.c  cdi_nvram.c  cdic.c  cdrtos.c  cosim_state.c  debug_server.c  m68k_arith.c  m68k_interp.c  main.c  mcd212.c  mcd212_video.c  periph.c  player_config.c  runtime.c  slave.c
runner/tests/: cdi_audio_test.c  cdi_input_test.c  cdi_nvram_test.c  cdic_test.c  m68k_arith_test.c  mcd212_video_test.c  periph_test.c  player_config_test.c
tools/: bios_navigation_smoke.py  bios_options_smoke.py  cdi_click.py  cdi_cosim.py  cdi_debug.py  cdi_view.py  check_dispatch_misses.py  collect_seeds.py  disc_insert_smoke.py  first_divergence.py  hotelmario_launch_probe.py  interp_report.py  package_runtime_release.py  realign_divergence.py  rtc_startup_smoke.py  shell_idle_smoke.py  test_function_aliases.py  trace_pcs.py
tools/session-probes/: attract_monitor.py  c3_postmortem.py  dd_postmortem.py  ram_scan.py  ring_markers.py  wake_postmortem.py  wake_trapenum.py  watch_a4.py  watch_c3.py  watch_datdry.py  watch_dd.py  watch_ontarget.py  watch_reg15.py  watch_ssplay_exit.py  watch_swap.py  watch_wake.py
